tests/reference/run-read_12-04c85a3.stderr
semantic error: Incompatible format: LFortran Modfile was generated using version '0.58.0-590-gdbf3299e4-dirty', but current LFortran version is '0.58.0-593-gfeaa83a93-dirty'
 --> tests/../integration_tests/read_12.f90:6:5
  |
6 |     open(newunit=u, file=fname, status="replace", action="write")
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
